--- a/public/css/admin/app.css
+++ b/public/css/admin/app.css
@@ -826,16 +826,12 @@ img {
   top: 4rem;
 }
 
-.z-20{
-  z-index: 20;
-}
-
-.z-30{
-  z-index: 30;
-}
-
 .z-40{
   z-index: 40;
+}
+
+.z-20{
+  z-index: 20;
 }
 
 .col-span-1{
@@ -854,14 +850,6 @@ img {
 .my-2{
   margin-top: 0.5rem;
   margin-bottom: 0.5rem;
-}
-
-.mt-2{
-  margin-top: 0.5rem;
-}
-
-.ml-4{
-  margin-left: 1rem;
 }
 
 .ml-3{
@@ -904,12 +892,12 @@ img {
   margin-left: 1.25rem;
 }
 
-.mb-3{
-  margin-bottom: 0.75rem;
+.mt-2{
+  margin-top: 0.5rem;
 }
 
-.mt-4{
-  margin-top: 1rem;
+.mb-3{
+  margin-bottom: 0.75rem;
 }
 
 .box-border{
@@ -944,8 +932,8 @@ img {
   height: 400px;
 }
 
-.h-\[240px\]{
-  height: 240px;
+.h-\[200px\]{
+  height: 200px;
 }
 
 .h-\[100\%\]{
@@ -976,8 +964,32 @@ img {
   height: 1.25rem;
 }
 
-.h-\[200px\]{
-  height: 200px;
+.h-\[240px\]{
+  height: 240px;
+}
+
+.h-\[260px\]{
+  height: 260px;
+}
+
+.h-\[280px\]{
+  height: 280px;
+}
+
+.h-\[300px\]{
+  height: 300px;
+}
+
+.h-\[50px\]{
+  height: 50px;
+}
+
+.h-\[20px\]{
+  height: 20px;
+}
+
+.h-\[28px\]{
+  height: 28px;
 }
 
 .max-h-\[calc\(100vh_-_theme\(space\.16\)\)\]{
@@ -1000,8 +1012,8 @@ img {
   width: 100%;
 }
 
-.w-\[240px\]{
-  width: 240px;
+.w-\[200px\]{
+  width: 200px;
 }
 
 .w-\[100\%\]{
@@ -1044,8 +1056,28 @@ img {
   width: 1.25rem;
 }
 
-.w-\[200px\]{
-  width: 200px;
+.w-\[240px\]{
+  width: 240px;
+}
+
+.w-\[300px\]{
+  width: 300px;
+}
+
+.w-\[50px\]{
+  width: 50px;
+}
+
+.w-\[52px\]{
+  width: 52px;
+}
+
+.w-\[20px\]{
+  width: 20px;
+}
+
+.w-\[28px\]{
+  width: 28px;
 }
 
 .min-w-\[1280\.3px\]{
@@ -1132,8 +1164,8 @@ img {
   grid-template-columns: repeat(3, minmax(0, 1fr));
 }
 
-.grid-cols-4{
-  grid-template-columns: repeat(4, minmax(0, 1fr));
+.grid-cols-6{
+  grid-template-columns: repeat(6, minmax(0, 1fr));
 }
 
 .grid-cols-2{
@@ -1144,12 +1176,8 @@ img {
   grid-template-columns: repeat(12, minmax(0, 1fr));
 }
 
-.grid-cols-6{
-  grid-template-columns: repeat(6, minmax(0, 1fr));
-}
-
-.grid-rows-2{
-  grid-template-rows: repeat(2, minmax(0, 1fr));
+.grid-cols-4{
+  grid-template-columns: repeat(4, minmax(0, 1fr));
 }
 
 .flex-col{
@@ -1168,6 +1196,10 @@ img {
   justify-content: space-between;
 }
 
+.gap-2{
+  gap: 0.5rem;
+}
+
 .gap-3{
   gap: 0.75rem;
 }
@@ -1176,16 +1208,16 @@ img {
   gap: 1rem;
 }
 
-.gap-2{
-  gap: 0.5rem;
-}
-
 .gap-5{
   gap: 1.25rem;
 }
 
-.gap-0{
-  gap: 0px;
+.gap-8{
+  gap: 2rem;
+}
+
+.gap-6{
+  gap: 1.5rem;
 }
 
 .gap-x-2{
@@ -1228,21 +1260,12 @@ img {
   border-radius: 0.375rem;
 }
 
-.border-b-2{
-  border-bottom-width: 2px;
-}
-
-.border-b{
-  border-bottom-width: 1px;
-}
-
 .border-b-\[1px\]{
   border-bottom-width: 1px;
 }
 
-.border-black{
-  --tw-border-opacity: 1;
-  border-color: rgb(0 0 0 / var(--tw-border-opacity));
+.border-b{
+  border-bottom-width: 1px;
 }
 
 .border-gray-300{
@@ -1310,63 +1333,14 @@ img {
   background-color: rgb(15 23 42 / var(--tw-bg-opacity));
 }
 
-.bg-\[\#666\]{
+.bg-\[\#c9c9c9\]{
   --tw-bg-opacity: 1;
-  background-color: rgb(102 102 102 / var(--tw-bg-opacity));
+  background-color: rgb(201 201 201 / var(--tw-bg-opacity));
 }
 
-.bg-\[\#999\]{
+.bg-\[\#313132\]{
   --tw-bg-opacity: 1;
-  background-color: rgb(153 153 153 / var(--tw-bg-opacity));
-}
-
-.bg-\[\#000\]{
-  --tw-bg-opacity: 1;
-  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
-}
-
-.bg-\[\#111\]{
-  --tw-bg-opacity: 1;
-  background-color: rgb(17 17 17 / var(--tw-bg-opacity));
-}
-
-.bg-\[\#fafafa\]{
-  --tw-bg-opacity: 1;
-  background-color: rgb(250 250 250 / var(--tw-bg-opacity));
-}
-
-.bg-\[\#757474\]{
-  --tw-bg-opacity: 1;
-  background-color: rgb(117 116 116 / var(--tw-bg-opacity));
-}
-
-.bg-\[\#b1b1b1\]{
-  --tw-bg-opacity: 1;
-  background-color: rgb(177 177 177 / var(--tw-bg-opacity));
-}
-
-.bg-\[\#c4c2c2\]{
-  --tw-bg-opacity: 1;
-  background-color: rgb(196 194 194 / var(--tw-bg-opacity));
-}
-
-.bg-\[\#e0e0e0\]{
-  --tw-bg-opacity: 1;
-  background-color: rgb(224 224 224 / var(--tw-bg-opacity));
-}
-
-.bg-\[\#e7e7e7\]{
-  --tw-bg-opacity: 1;
-  background-color: rgb(231 231 231 / var(--tw-bg-opacity));
-}
-
-.bg-\[\#f7f7f7\]{
-  --tw-bg-opacity: 1;
-  background-color: rgb(247 247 247 / var(--tw-bg-opacity));
-}
-
-.bg-\[\#eeec\]{
-  background-color: #eeec;
+  background-color: rgb(49 49 50 / var(--tw-bg-opacity));
 }
 
 .object-cover{
@@ -1409,6 +1383,11 @@ img {
   padding-bottom: 1rem;
 }
 
+.py-2{
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+}
+
 .px-2{
   padding-left: 0.5rem;
   padding-right: 0.5rem;
@@ -1434,9 +1413,9 @@ img {
   padding-right: 1.25rem;
 }
 
-.py-2{
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
+.py-3{
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
 }
 
 .pl-3{
@@ -1445,6 +1424,10 @@ img {
 
 .pt-4{
   padding-top: 1rem;
+}
+
+.pb-4{
+  padding-bottom: 1rem;
 }
 
 .pl-4{
@@ -1471,12 +1454,8 @@ img {
   padding-right: 1.25rem;
 }
 
-.pt-2{
-  padding-top: 0.5rem;
-}
-
-.pb-4{
-  padding-bottom: 1rem;
+.pb-2{
+  padding-bottom: 0.5rem;
 }
 
 .text-left{
@@ -1541,6 +1520,10 @@ img {
   line-height: 2rem;
 }
 
+.text-\[17px\]{
+  font-size: 17px;
+}
+
 .font-semibold{
   font-weight: 600;
 }
@@ -1551,6 +1534,14 @@ img {
 
 .font-bold{
   font-weight: 700;
+}
+
+.font-light{
+  font-weight: 300;
+}
+
+.font-thin{
+  font-weight: 100;
 }
 
 .tracking-wider{
@@ -1617,6 +1608,26 @@ img {
   color: rgb(239 68 68 / var(--tw-text-opacity));
 }
 
+.text-gray-600{
+  --tw-text-opacity: 1;
+  color: rgb(75 85 99 / var(--tw-text-opacity));
+}
+
+.text-rose-700{
+  --tw-text-opacity: 1;
+  color: rgb(190 18 60 / var(--tw-text-opacity));
+}
+
+.text-slate-100{
+  --tw-text-opacity: 1;
+  color: rgb(241 245 249 / var(--tw-text-opacity));
+}
+
+.text-slate-50{
+  --tw-text-opacity: 1;
+  color: rgb(248 250 252 / var(--tw-text-opacity));
+}
+
 .line-through{
   -webkit-text-decoration-line: line-through;
           text-decoration-line: line-through;
@@ -1638,6 +1649,12 @@ img {
   opacity: 0.75;
 }
 
+.shadow-md{
+  --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
 .shadow-lg{
   --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
@@ -1653,18 +1670,6 @@ img {
 .shadow-sm{
   --tw-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.05);
   --tw-shadow-colored: 0 1px 2px 0 var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.shadow-inner{
-  --tw-shadow: inset 0 2px 4px 0 rgb(0 0 0 / 0.05);
-  --tw-shadow-colored: inset 0 2px 4px 0 var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.shadow-md{
-  --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
-  --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
@@ -1821,16 +1826,8 @@ img {
     grid-column: span 9 / span 9;
   }
 
-  .lg\:mt-2{
-    margin-top: 0.5rem;
-  }
-
   .lg\:mb-0{
     margin-bottom: 0px;
-  }
-
-  .lg\:mt-1{
-    margin-top: 0.25rem;
   }
 
   .lg\:block{
