--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,15 +1,16 @@
 @import url(https://cdnjs.cloudflare.com/ajax/libs/simple-line-icons/2.5.5/css/simple-line-icons.min.css);
 @import url(https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap);
-@import url(https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js);
 /*
 ! tailwindcss v3.0.17 | MIT License | https://tailwindcss.com
 */
+
 
 
 /*
 1. Prevent padding and border from affecting element width. (https://github.com/mozdevs/cssremedy/issues/4)
 2. Allow adding a border to an element by just adding a border-width. (https://github.com/tailwindcss/tailwindcss/pull/116)
 */
+
 
 
 *,
@@ -22,10 +23,12 @@
 }
 
 
+
 ::before,
 ::after {
   --tw-content: '';
 }
+
 
 
 /*
@@ -34,6 +37,7 @@
 3. Use a more readable tab size.
 4. Use the user's configured `sans` font-family by default.
 */
+
 
 
 html {
@@ -46,16 +50,19 @@ html {
 }
 
 
+
 /*
 1. Remove the margin in all browsers.
 2. Inherit line-height from `html` so users can set them as a class directly on the `html` element.
 */
 
 
+
 body {
   margin: 0; /* 1 */
   line-height: inherit; /* 2 */
 }
+
 
 
 /*
@@ -65,6 +72,7 @@ body {
 */
 
 
+
 hr {
   height: 0; /* 1 */
   color: inherit; /* 2 */
@@ -72,9 +80,11 @@ hr {
 }
 
 
+
 /*
 Add the correct text decoration in Chrome, Edge, and Safari.
 */
+
 
 
 abbr:where([title]) {
@@ -83,9 +93,11 @@ abbr:where([title]) {
 }
 
 
+
 /*
 Remove the default font size and weight for headings.
 */
+
 
 
 h1,
@@ -99,9 +111,11 @@ h6 {
 }
 
 
+
 /*
 Reset links to optimize for opt-in styling instead of opt-out.
 */
+
 
 
 a {
@@ -110,9 +124,11 @@ a {
 }
 
 
+
 /*
 Add the correct font weight in Edge and Safari.
 */
+
 
 
 b,
@@ -121,10 +137,12 @@ strong {
 }
 
 
+
 /*
 1. Use the user's configured `mono` font family by default.
 2. Correct the odd `em` font sizing in all browsers.
 */
+
 
 
 code,
@@ -136,9 +154,11 @@ pre {
 }
 
 
+
 /*
 Add the correct font size in all browsers.
 */
+
 
 
 small {
@@ -146,9 +166,11 @@ small {
 }
 
 
+
 /*
 Prevent `sub` and `sup` elements from affecting the line height in all browsers.
 */
+
 
 
 sub,
@@ -160,14 +182,17 @@ sup {
 }
 
 
+
 sub {
   bottom: -0.25em;
 }
 
 
+
 sup {
   top: -0.5em;
 }
+
 
 
 /*
@@ -177,6 +202,7 @@ sup {
 */
 
 
+
 table {
   text-indent: 0; /* 1 */
   border-color: inherit; /* 2 */
@@ -184,11 +210,13 @@ table {
 }
 
 
+
 /*
 1. Change the font styles in all browsers.
 2. Remove the margin in Firefox and Safari.
 3. Remove default padding in all browsers.
 */
+
 
 
 button,
@@ -205,9 +233,11 @@ textarea {
 }
 
 
+
 /*
 Remove the inheritance of text transform in Edge and Firefox.
 */
+
 
 
 button,
@@ -216,10 +246,12 @@ select {
 }
 
 
+
 /*
 1. Correct the inability to style clickable types in iOS and Safari.
 2. Remove default button styles.
 */
+
 
 
 button,
@@ -232,9 +264,11 @@ button,
 }
 
 
+
 /*
 Use the modern Firefox focus style for all focusable elements.
 */
+
 
 
 :-moz-focusring {
@@ -242,9 +276,11 @@ Use the modern Firefox focus style for all focusable elements.
 }
 
 
+
 /*
 Remove the additional `:invalid` styles in Firefox. (https://github.com/mozilla/gecko-dev/blob/2f9eacd9d3d995c937b4251a5557d95d494c9be1/layout/style/res/forms.css#L728-L737)
 */
+
 
 
 :-moz-ui-invalid {
@@ -252,9 +288,11 @@ Remove the additional `:invalid` styles in Firefox. (https://github.com/mozilla/
 }
 
 
+
 /*
 Add the correct vertical alignment in Chrome and Firefox.
 */
+
 
 
 progress {
@@ -262,9 +300,11 @@ progress {
 }
 
 
+
 /*
 Correct the cursor style of increment and decrement buttons in Safari.
 */
+
 
 
 ::-webkit-inner-spin-button,
@@ -273,10 +313,12 @@ Correct the cursor style of increment and decrement buttons in Safari.
 }
 
 
+
 /*
 1. Correct the odd appearance in Chrome and Safari.
 2. Correct the outline style in Safari.
 */
+
 
 
 [type='search'] {
@@ -285,14 +327,17 @@ Correct the cursor style of increment and decrement buttons in Safari.
 }
 
 
+
 /*
 Remove the inner padding in Chrome and Safari on macOS.
 */
 
 
+
 ::-webkit-search-decoration {
   -webkit-appearance: none;
 }
+
 
 
 /*
@@ -301,10 +346,12 @@ Remove the inner padding in Chrome and Safari on macOS.
 */
 
 
+
 ::-webkit-file-upload-button {
   -webkit-appearance: button; /* 1 */
   font: inherit; /* 2 */
 }
+
 
 
 /*
@@ -312,14 +359,17 @@ Add the correct display in Chrome and Safari.
 */
 
 
+
 summary {
   display: list-item;
 }
 
 
+
 /*
 Removes the default spacing and border for appropriate elements.
 */
+
 
 
 blockquote,
@@ -339,15 +389,18 @@ pre {
 }
 
 
+
 fieldset {
   margin: 0;
   padding: 0;
 }
 
 
+
 legend {
   padding: 0;
 }
+
 
 
 ol,
@@ -359,14 +412,17 @@ menu {
 }
 
 
+
 /*
 Prevent resizing textareas horizontally by default.
 */
 
 
+
 textarea {
   resize: vertical;
 }
+
 
 
 /*
@@ -375,16 +431,19 @@ textarea {
 */
 
 
+
 input::-moz-placeholder, textarea::-moz-placeholder {
   opacity: 1; /* 1 */
   color: #9ca3af; /* 2 */
 }
 
 
+
 input:-ms-input-placeholder, textarea:-ms-input-placeholder {
   opacity: 1; /* 1 */
   color: #9ca3af; /* 2 */
 }
+
 
 
 input::placeholder,
@@ -394,9 +453,11 @@ textarea::placeholder {
 }
 
 
+
 /*
 Set the default cursor for buttons.
 */
+
 
 
 button,
@@ -405,9 +466,11 @@ button,
 }
 
 
+
 /*
 Make sure disabled buttons don't get the pointer cursor.
 */
+
 
 
 :disabled {
@@ -415,11 +478,13 @@ Make sure disabled buttons don't get the pointer cursor.
 }
 
 
+
 /*
 1. Make replaced elements `display: block` by default. (https://github.com/mozdevs/cssremedy/issues/14)
 2. Add `vertical-align: middle` to align replaced elements more sensibly by default. (https://github.com/jensimmons/cssremedy/issues/14#issuecomment-634934210)
    This can trigger a poorly considered lint error in some tools but is included by design.
 */
+
 
 
 img,
@@ -435,9 +500,11 @@ object {
 }
 
 
+
 /*
 Constrain images and videos to the parent width and preserve their intrinsic aspect ratio. (https://github.com/mozdevs/cssremedy/issues/14)
 */
+
 
 
 img,
@@ -447,14 +514,17 @@ video {
 }
 
 
+
 /*
 Ensure the default browser behavior of the `hidden` attribute.
 */
 
 
+
 [hidden] {
   display: none;
 }
+
 
 
 [type='text'],[type='email'],[type='url'],[type='password'],[type='number'],[type='date'],[type='datetime-local'],[type='month'],[type='search'],[type='tel'],[type='time'],[type='week'],[multiple],textarea,select{
@@ -475,6 +545,7 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 
 
+
 [type='text']:focus, [type='email']:focus, [type='url']:focus, [type='password']:focus, [type='number']:focus, [type='date']:focus, [type='datetime-local']:focus, [type='month']:focus, [type='search']:focus, [type='tel']:focus, [type='time']:focus, [type='week']:focus, [multiple]:focus, textarea:focus, select:focus{
   outline: 2px solid transparent;
   outline-offset: 2px;
@@ -489,10 +560,12 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 
 
+
 input::-moz-placeholder, textarea::-moz-placeholder{
   color: #6b7280;
   opacity: 1;
 }
+
 
 
 input:-ms-input-placeholder, textarea:-ms-input-placeholder{
@@ -501,10 +574,12 @@ input:-ms-input-placeholder, textarea:-ms-input-placeholder{
 }
 
 
+
 input::placeholder,textarea::placeholder{
   color: #6b7280;
   opacity: 1;
 }
+
 
 
 ::-webkit-datetime-edit-fields-wrapper{
@@ -512,9 +587,11 @@ input::placeholder,textarea::placeholder{
 }
 
 
+
 ::-webkit-date-and-time-value{
   min-height: 1.5em;
 }
+
 
 
 select{
@@ -528,6 +605,7 @@ select{
 }
 
 
+
 [multiple]{
   background-image: initial;
   background-position: initial;
@@ -537,6 +615,7 @@ select{
   -webkit-print-color-adjust: unset;
           color-adjust: unset;
 }
+
 
 
 [type='checkbox'],[type='radio']{
@@ -564,14 +643,17 @@ select{
 }
 
 
+
 [type='checkbox']{
   border-radius: 0px;
 }
 
 
+
 [type='radio']{
   border-radius: 100%;
 }
+
 
 
 [type='checkbox']:focus,[type='radio']:focus{
@@ -587,6 +669,7 @@ select{
 }
 
 
+
 [type='checkbox']:checked,[type='radio']:checked{
   border-color: transparent;
   background-color: currentColor;
@@ -596,9 +679,11 @@ select{
 }
 
 
+
 [type='checkbox']:checked{
   background-image: url("data:image/svg+xml,%3csvg viewBox='0 0 16 16' fill='white' xmlns='http://www.w3.org/2000/svg'%3e%3cpath d='M12.207 4.793a1 1 0 010 1.414l-5 5a1 1 0 01-1.414 0l-2-2a1 1 0 011.414-1.414L6.5 9.086l4.293-4.293a1 1 0 011.414 0z'/%3e%3c/svg%3e");
 }
+
 
 
 [type='radio']:checked{
@@ -606,10 +691,12 @@ select{
 }
 
 
+
 [type='checkbox']:checked:hover,[type='checkbox']:checked:focus,[type='radio']:checked:hover,[type='radio']:checked:focus{
   border-color: transparent;
   background-color: currentColor;
 }
+
 
 
 [type='checkbox']:indeterminate{
@@ -622,10 +709,12 @@ select{
 }
 
 
+
 [type='checkbox']:indeterminate:hover,[type='checkbox']:indeterminate:focus{
   border-color: transparent;
   background-color: currentColor;
 }
+
 
 
 [type='file']{
@@ -639,9 +728,11 @@ select{
 }
 
 
+
 [type='file']:focus{
   outline: 1px auto -webkit-focus-ring-color;
 }
+
 
 
 *, ::before, ::after{
@@ -697,11 +788,13 @@ body {
 @media (min-width: 640px){
 
 
+
   .container{
     max-width: 640px;
   }
 }
 @media (min-width: 768px){
+
 
 
   .container{
@@ -711,6 +804,7 @@ body {
 @media (min-width: 1024px){
 
 
+
   .container{
     max-width: 1024px;
   }
@@ -718,11 +812,13 @@ body {
 @media (min-width: 1280px){
 
 
+
   .container{
     max-width: 1280px;
   }
 }
 @media (min-width: 1536px){
+
 
 
   .container{
@@ -814,8 +910,14 @@ body {
 .hidden{
   display: none;
 }
+.h-96{
+  height: 24rem;
+}
 .h-full{
   height: 100%;
+}
+.h-3{
+  height: 0.75rem;
 }
 .h-6{
   height: 1.5rem;
@@ -838,9 +940,6 @@ body {
 .h-5{
   height: 1.25rem;
 }
-.h-72{
-  height: 18rem;
-}
 .max-h-\[calc\(100vh_-_theme\(space\.16\)\)\]{
   max-height: calc(100vh - 4rem);
 }
@@ -849,6 +948,12 @@ body {
 }
 .min-h-\[calc\(100vh_-_theme\(space\.16\)\)\]{
   min-height: calc(100vh - 4rem);
+}
+.w-3\/5{
+  width: 60%;
+}
+.w-3{
+  width: 0.75rem;
 }
 .w-full{
   width: 100%;
@@ -876,24 +981,6 @@ body {
 }
 .w-5{
   width: 1.25rem;
-}
-.w-32{
-  width: 8rem;
-}
-.w-10{
-  width: 2.5rem;
-}
-.w-1\/3{
-  width: 33.333333%;
-}
-.w-2\/4{
-  width: 50%;
-}
-.w-3\/5{
-  width: 60%;
-}
-.w-28{
-  width: 7rem;
 }
 .max-w-sm{
   max-width: 24rem;
@@ -928,11 +1015,13 @@ body {
 @-webkit-keyframes spin{
 
 
+
   to{
     transform: rotate(360deg);
   }
 }
 @keyframes spin{
+
 
 
   to{
@@ -970,28 +1059,32 @@ body {
 .justify-between{
   justify-content: space-between;
 }
+.justify-around{
+  justify-content: space-around;
+}
+.gap-4{
+  gap: 1rem;
+}
+.gap-2{
+  gap: 0.5rem;
+}
 .gap-3{
   gap: 0.75rem;
 }
 .gap-8{
   gap: 2rem;
 }
-.gap-2{
-  gap: 0.5rem;
-}
 .gap-5{
   gap: 1.25rem;
-}
-.gap-4{
-  gap: 1rem;
-}
-.gap-6{
-  gap: 1.5rem;
 }
 .divide-y > :not([hidden]) ~ :not([hidden]){
   --tw-divide-y-reverse: 0;
   border-top-width: calc(1px * calc(1 - var(--tw-divide-y-reverse)));
   border-bottom-width: calc(1px * var(--tw-divide-y-reverse));
+}
+.divide-slate-300 > :not([hidden]) ~ :not([hidden]){
+  --tw-divide-opacity: 1;
+  border-color: rgb(203 213 225 / var(--tw-divide-opacity));
 }
 .divide-gray-100 > :not([hidden]) ~ :not([hidden]){
   --tw-divide-opacity: 1;
@@ -1003,14 +1096,20 @@ body {
 .overflow-hidden{
   overflow: hidden;
 }
+.rounded-2xl{
+  border-radius: 1rem;
+}
+.rounded-\[50\%\]{
+  border-radius: 50%;
+}
+.rounded-full{
+  border-radius: 9999px;
+}
 .rounded-md{
   border-radius: 0.375rem;
 }
 .rounded-lg{
   border-radius: 0.5rem;
-}
-.rounded-full{
-  border-radius: 9999px;
 }
 .border-b-\[1px\]{
   border-bottom-width: 1px;
@@ -1036,9 +1135,29 @@ body {
   --tw-border-opacity: 1;
   border-color: rgb(30 41 59 / var(--tw-border-opacity));
 }
-.bg-gray-300{
+.bg-gray-100{
   --tw-bg-opacity: 1;
-  background-color: rgb(209 213 219 / var(--tw-bg-opacity));
+  background-color: rgb(243 244 246 / var(--tw-bg-opacity));
+}
+.bg-white{
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+.bg-gray-500{
+  --tw-bg-opacity: 1;
+  background-color: rgb(107 114 128 / var(--tw-bg-opacity));
+}
+.bg-amber-200{
+  --tw-bg-opacity: 1;
+  background-color: rgb(253 230 138 / var(--tw-bg-opacity));
+}
+.bg-zinc-700{
+  --tw-bg-opacity: 1;
+  background-color: rgb(63 63 70 / var(--tw-bg-opacity));
+}
+.bg-sky-500{
+  --tw-bg-opacity: 1;
+  background-color: rgb(14 165 233 / var(--tw-bg-opacity));
 }
 .bg-zinc-900{
   --tw-bg-opacity: 1;
@@ -1059,14 +1178,6 @@ body {
 .bg-slate-50{
   --tw-bg-opacity: 1;
   background-color: rgb(248 250 252 / var(--tw-bg-opacity));
-}
-.bg-white{
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-.bg-gray-100{
-  --tw-bg-opacity: 1;
-  background-color: rgb(243 244 246 / var(--tw-bg-opacity));
 }
 .bg-slate-800{
   --tw-bg-opacity: 1;
@@ -1096,33 +1207,46 @@ body {
   padding-left: 0.75rem;
   padding-right: 0.75rem;
 }
-.py-4{
-  padding-top: 1rem;
-  padding-bottom: 1rem;
-}
-.py-2{
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
-}
-.px-4{
-  padding-left: 1rem;
-  padding-right: 1rem;
+.py-24{
+  padding-top: 6rem;
+  padding-bottom: 6rem;
 }
 .py-3{
   padding-top: 0.75rem;
   padding-bottom: 0.75rem;
 }
-.px-5{
-  padding-left: 1.25rem;
-  padding-right: 1.25rem;
+.px-6{
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
+}
+.py-4{
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+}
+.px-4{
+  padding-left: 1rem;
+  padding-right: 1rem;
 }
 .py-1{
   padding-top: 0.25rem;
   padding-bottom: 0.25rem;
 }
-.py-8{
-  padding-top: 2rem;
-  padding-bottom: 2rem;
+.py-2{
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+}
+.px-5{
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
+}
+.pt-28{
+  padding-top: 7rem;
+}
+.pb-4{
+  padding-bottom: 1rem;
+}
+.pt-6{
+  padding-top: 1.5rem;
 }
 .pt-16{
   padding-top: 4rem;
@@ -1139,36 +1263,34 @@ body {
 .font-logo{
   font-family: Mochiy Pop P One, sans-serif;
 }
-.text-4xl{
-  font-size: 2.25rem;
-  line-height: 2.5rem;
+.text-3xl{
+  font-size: 1.875rem;
+  line-height: 2.25rem;
 }
 .text-sm{
   font-size: 0.875rem;
   line-height: 1.25rem;
 }
+.text-2xl{
+  font-size: 1.5rem;
+  line-height: 2rem;
+}
 .text-xs{
   font-size: 0.75rem;
   line-height: 1rem;
-}
-.text-3xl{
-  font-size: 1.875rem;
-  line-height: 2.25rem;
 }
 .text-xl{
   font-size: 1.25rem;
   line-height: 1.75rem;
 }
-.text-2xl{
-  font-size: 1.5rem;
-  line-height: 2rem;
-}
-.text-base{
-  font-size: 1rem;
-  line-height: 1.5rem;
-}
 .font-medium{
   font-weight: 500;
+}
+.font-light{
+  font-weight: 300;
+}
+.font-normal{
+  font-weight: 400;
 }
 .font-thin{
   font-weight: 100;
@@ -1176,23 +1298,25 @@ body {
 .font-semibold{
   font-weight: 600;
 }
-.font-light{
-  font-weight: 300;
-}
-.font-extralight{
-  font-weight: 200;
-}
 .text-zinc-900{
   --tw-text-opacity: 1;
   color: rgb(24 24 27 / var(--tw-text-opacity));
 }
-.text-slate-50{
+.text-zinc-500{
   --tw-text-opacity: 1;
-  color: rgb(248 250 252 / var(--tw-text-opacity));
+  color: rgb(113 113 122 / var(--tw-text-opacity));
+}
+.text-slate-500{
+  --tw-text-opacity: 1;
+  color: rgb(100 116 139 / var(--tw-text-opacity));
 }
 .text-white{
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+.text-slate-50{
+  --tw-text-opacity: 1;
+  color: rgb(248 250 252 / var(--tw-text-opacity));
 }
 .text-red-800{
   --tw-text-opacity: 1;
@@ -1277,6 +1401,10 @@ body {
 .ring-offset-2{
   --tw-ring-offset-width: 2px;
 }
+.drop-shadow-lg{
+  --tw-drop-shadow: drop-shadow(0 10px 8px rgb(0 0 0 / 0.04)) drop-shadow(0 4px 3px rgb(0 0 0 / 0.1));
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
+}
 .transition{
   transition-property: color, background-color, border-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-text-decoration-color, -webkit-backdrop-filter;
   transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
@@ -1332,9 +1460,11 @@ body {
 @media (min-width: 640px){
 
 
+
   .sm\:flex{
     display: flex;
   }
+
 
 
   .sm\:w-72{
@@ -1345,9 +1475,11 @@ body {
 @media (min-width: 1024px){
 
 
+
   .lg\:col-span-3{
     grid-column: span 3 / span 3;
   }
+
 
 
   .lg\:col-span-9{
@@ -1355,9 +1487,11 @@ body {
   }
 
 
+
   .lg\:mb-0{
     margin-bottom: 0px;
   }
+
 
 
   .lg\:block{
@@ -1365,9 +1499,11 @@ body {
   }
 
 
+
   .lg\:flex{
     display: flex;
   }
+
 
 
   .lg\:hidden{
@@ -1375,9 +1511,11 @@ body {
   }
 
 
+
   .lg\:w-\[980px\]{
     width: 980px;
   }
+
 
 
   .lg\:gap-6{
@@ -1385,9 +1523,11 @@ body {
   }
 
 
+
   .lg\:p-7{
     padding: 1.75rem;
   }
+
 
 
   .lg\:px-10{
@@ -1396,7 +1536,15 @@ body {
   }
 
 
+
   .lg\:pl-72{
     padding-left: 18rem;
+  }
+
+
+
+  .lg\:text-4xl{
+    font-size: 2.25rem;
+    line-height: 2.5rem;
   }
 }
